# basic-api-rust

./: .env.example  .gitignore  Cargo.toml
migrations/: 20230429132043_create_user.sql
src/: db.rs  main.rs
src/controllers/: user_controller.rs
src/models/: user.rs
src/routes/: user_routes.rs
