[package]
name = "empty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.16", features = ["full"] }
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-rustls" ] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
async_once = "0.2.6"
